Fix for build